exports[`invalid(1): a { margin: 0px; } 1`] = `

  1 | a { margin: 0px; }

`;

exports[`invalid(1): a { margin: 0px; } 2`] = `

Message:
> 1 | a { margin: 0px; }
    |              ^^ Remove the unit from this zero length.

Output:
  1 | a { margin: 0; }

`;

exports[`invalid(10): @container (block-size > 0px) {} 1`] = `

  1 | @container (block-size > 0px) {}

`;

exports[`invalid(10): @container (block-size > 0px) {} 2`] = `

Message:
> 1 | @container (block-size > 0px) {}
    |                           ^^ Remove the unit from this zero length.

Output:
  1 | @container (block-size > 0) {}

`;

exports[`invalid(11): @supports (margin: 0px) { a { padding: 0em; } } 1`] = `

  1 | @supports (margin: 0px) { a { padding: 0em; } }

`;

exports[`invalid(11): @supports (margin: 0px) { a { padding: 0em; } } 2`] = `

Message:
> 1 | @supports (margin: 0px) { a { padding: 0em; } }
    |                     ^^ Remove the unit from this zero length.

Output:
  1 | @supports (margin: 0) { a { padding: 0em; } }

`;

exports[`invalid(11): @supports (margin: 0px) { a { padding: 0em; } } 3`] = `

Message:
> 1 | @supports (margin: 0px) { a { padding: 0em; } }
    |                                         ^^ Remove the unit from this zero length.

Output:
  1 | @supports (margin: 0px) { a { padding: 0; } }

`;

exports[`invalid(12): a { flex-basis: 0px; } 1`] = `

  1 | a { flex-basis: 0px; }

`;

exports[`invalid(12): a { flex-basis: 0px; } 2`] = `

Message:
> 1 | a { flex-basis: 0px; }
    |                  ^^ Remove the unit from this zero length.

Output:
  1 | a { flex-basis: 0; }

`;

exports[`invalid(13): a { transform: translate(0px, 0rem); filter: blur(0px); grid-template-columns: minmax(0px, 1fr); } 1`] = `

  1 | a { transform: translate(0px, 0rem); filter: blur(0px); grid-template-columns: minmax(0px, 1fr); }

`;

exports[`invalid(13): a { transform: translate(0px, 0rem); filter: blur(0px); grid-template-columns: minmax(0px, 1fr); } 2`] = `

Message:
> 1 | a { transform: translate(0px, 0rem); filter: blur(0px); grid-template-columns: minmax(0px, 1fr); }
    |                           ^^ Remove the unit from this zero length.

Output:
  1 | a { transform: translate(0, 0rem); filter: blur(0px); grid-template-columns: minmax(0px, 1fr); }

`;

exports[`invalid(13): a { transform: translate(0px, 0rem); filter: blur(0px); grid-template-columns: minmax(0px, 1fr); } 3`] = `

Message:
> 1 | a { transform: translate(0px, 0rem); filter: blur(0px); grid-template-columns: minmax(0px, 1fr); }
    |                                ^^^ Remove the unit from this zero length.

Output:
  1 | a { transform: translate(0px, 0); filter: blur(0px); grid-template-columns: minmax(0px, 1fr); }

`;

exports[`invalid(13): a { transform: translate(0px, 0rem); filter: blur(0px); grid-template-columns: minmax(0px, 1fr); } 4`] = `

Message:
> 1 | a { transform: translate(0px, 0rem); filter: blur(0px); grid-template-columns: minmax(0px, 1fr); }
    |                                                    ^^ Remove the unit from this zero length.

Output:
  1 | a { transform: translate(0px, 0rem); filter: blur(0); grid-template-columns: minmax(0px, 1fr); }

`;

exports[`invalid(13): a { transform: translate(0px, 0rem); filter: blur(0px); grid-template-columns: minmax(0px, 1fr); } 5`] = `

Message:
> 1 | a { transform: translate(0px, 0rem); filter: blur(0px); grid-template-columns: minmax(0px, 1fr); }
    |                                                                                        ^^ Remove the unit from this zero length.

Output:
  1 | a { transform: translate(0px, 0rem); filter: blur(0px); grid-template-columns: minmax(0, 1fr); }

`;

exports[`invalid(14): a { border: 0q solid; } 1`] = `

  1 | a { border: 0q solid; }

`;

exports[`invalid(14): a { border: 0q solid; } 2`] = `

Message:
> 1 | a { border: 0q solid; }
    |              ^ Remove the unit from this zero length.

Output:
  1 | a { border: 0 solid; }

`;

exports[`invalid(15): a { width: 0.0px; } 1`] = `

  1 | a { width: 0.0px; }

`;

exports[`invalid(15): a { width: 0.0px; } 2`] = `

Message:
> 1 | a { width: 0.0px; }
    |               ^^ Remove the unit from this zero length.

Output:
  1 | a { width: 0.0; }

`;

exports[`invalid(16): a { width: 0e999px; } 1`] = `

  1 | a { width: 0e999px; }

`;

exports[`invalid(16): a { width: 0e999px; } 2`] = `

Message:
> 1 | a { width: 0e999px; }
    |                 ^^ Remove the unit from this zero length.

Output:
  1 | a { width: 0e999; }

`;

exports[`invalid(17): .a:export { gap: 0px; } :export, .a { gap: 0px; } 1`] = `

  1 | .a:export { gap: 0px; } :export, .a { gap: 0px; }

`;

exports[`invalid(17): .a:export { gap: 0px; } :export, .a { gap: 0px; } 2`] = `

Message:
> 1 | .a:export { gap: 0px; } :export, .a { gap: 0px; }
    |                   ^^ Remove the unit from this zero length.

Output:
  1 | .a:export { gap: 0; } :export, .a { gap: 0px; }

`;

exports[`invalid(17): .a:export { gap: 0px; } :export, .a { gap: 0px; } 3`] = `

Message:
> 1 | .a:export { gap: 0px; } :export, .a { gap: 0px; }
    |                                             ^^ Remove the unit from this zero length.

Output:
  1 | .a:export { gap: 0px; } :export, .a { gap: 0; }

`;

exports[`invalid(2): a { margin: var(--space) 0px; padding: 0px env(safe-area-inset-bottom); } 1`] = `

  1 | a { margin: var(--space) 0px; padding: 0px env(safe-area-inset-bottom); }

`;

exports[`invalid(2): a { margin: var(--space) 0px; padding: 0px env(safe-area-inset-bottom); } 2`] = `

Message:
> 1 | a { margin: var(--space) 0px; padding: 0px env(safe-area-inset-bottom); }
    |                           ^^ Remove the unit from this zero length.

Output:
  1 | a { margin: var(--space) 0; padding: 0px env(safe-area-inset-bottom); }

`;

exports[`invalid(2): a { margin: var(--space) 0px; padding: 0px env(safe-area-inset-bottom); } 3`] = `

Message:
> 1 | a { margin: var(--space) 0px; padding: 0px env(safe-area-inset-bottom); }
    |                                         ^^ Remove the unit from this zero length.

Output:
  1 | a { margin: var(--space) 0px; padding: 0 env(safe-area-inset-bottom); }

`;

exports[`invalid(3): a { margin: 0px /* keep */; } 1`] = `

  1 | a { margin: 0px /* keep */; }

`;

exports[`invalid(3): a { margin: 0px /* keep */; } 2`] = `

Message:
> 1 | a { margin: 0px /* keep */; }
    |              ^^ Remove the unit from this zero length.

Output:
  1 | a { margin: 0 /* keep */; }

`;

exports[`invalid(4): a { margin: +0.000PX -0rem 0e3cqw; } 1`] = `

  1 | a { margin: +0.000PX -0rem 0e3cqw; }

`;

exports[`invalid(4): a { margin: +0.000PX -0rem 0e3cqw; } 2`] = `

Message:
> 1 | a { margin: +0.000PX -0rem 0e3cqw; }
    |                   ^^ Remove the unit from this zero length.

Output:
  1 | a { margin: +0.000 -0rem 0e3cqw; }

`;

exports[`invalid(4): a { margin: +0.000PX -0rem 0e3cqw; } 3`] = `

Message:
> 1 | a { margin: +0.000PX -0rem 0e3cqw; }
    |                        ^^^ Remove the unit from this zero length.

Output:
  1 | a { margin: +0.000PX -0 0e3cqw; }

`;

exports[`invalid(4): a { margin: +0.000PX -0rem 0e3cqw; } 4`] = `

Message:
> 1 | a { margin: +0.000PX -0rem 0e3cqw; }
    |                               ^^^ Remove the unit from this zero length.

Output:
  1 | a { margin: +0.000PX -0rem 0e3; }

`;

exports[`invalid(5): @media (width > 0px) { a { margin: 0px; } } 1`] = `

  1 | @media (width > 0px) { a { margin: 0px; } }

`;

exports[`invalid(5): @media (width > 0px) { a { margin: 0px; } } 2`] = `

Message:
> 1 | @media (width > 0px) { a { margin: 0px; } }
    |                  ^^ Remove the unit from this zero length.

Output:
  1 | @media (width > 0) { a { margin: 0px; } }

`;

exports[`invalid(5): @media (width > 0px) { a { margin: 0px; } } 3`] = `

Message:
> 1 | @media (width > 0px) { a { margin: 0px; } }
    |                                     ^^ Remove the unit from this zero length.

Output:
  1 | @media (width > 0px) { a { margin: 0; } }

`;

exports[`invalid(6): @media (min-width: 0px) and (0px < height) { a { margin: 0px; } } 1`] = `

  1 | @media (min-width: 0px) and (0px < height) { a { margin: 0px; } }

`;

exports[`invalid(6): @media (min-width: 0px) and (0px < height) { a { margin: 0px; } } 2`] = `

Message:
> 1 | @media (min-width: 0px) and (0px < height) { a { margin: 0px; } }
    |                     ^^ Remove the unit from this zero length.

Output:
  1 | @media (min-width: 0) and (0px < height) { a { margin: 0px; } }

`;

exports[`invalid(6): @media (min-width: 0px) and (0px < height) { a { margin: 0px; } } 3`] = `

Message:
> 1 | @media (min-width: 0px) and (0px < height) { a { margin: 0px; } }
    |                               ^^ Remove the unit from this zero length.

Output:
  1 | @media (min-width: 0px) and (0 < height) { a { margin: 0px; } }

`;

exports[`invalid(6): @media (min-width: 0px) and (0px < height) { a { margin: 0px; } } 4`] = `

Message:
> 1 | @media (min-width: 0px) and (0px < height) { a { margin: 0px; } }
    |                                                           ^^ Remove the unit from this zero length.

Output:
  1 | @media (min-width: 0px) and (0px < height) { a { margin: 0; } }

`;

exports[`invalid(7): @media (max-device-width: 0px) {} 1`] = `

  1 | @media (max-device-width: 0px) {}

`;

exports[`invalid(7): @media (max-device-width: 0px) {} 2`] = `

Message:
> 1 | @media (max-device-width: 0px) {}
    |                            ^^ Remove the unit from this zero length.

Output:
  1 | @media (max-device-width: 0) {}

`;

exports[`invalid(8): @container (width > 0px) { a { padding: 0em; } } 1`] = `

  1 | @container (width > 0px) { a { padding: 0em; } }

`;

exports[`invalid(8): @container (width > 0px) { a { padding: 0em; } } 2`] = `

Message:
> 1 | @container (width > 0px) { a { padding: 0em; } }
    |                      ^^ Remove the unit from this zero length.

Output:
  1 | @container (width > 0) { a { padding: 0em; } }

`;

exports[`invalid(8): @container (width > 0px) { a { padding: 0em; } } 3`] = `

Message:
> 1 | @container (width > 0px) { a { padding: 0em; } }
    |                                          ^^ Remove the unit from this zero length.

Output:
  1 | @container (width > 0px) { a { padding: 0; } }

`;

exports[`invalid(9): @container (inline-size: 0px) { a { padding: 0em; } } 1`] = `

  1 | @container (inline-size: 0px) { a { padding: 0em; } }

`;

exports[`invalid(9): @container (inline-size: 0px) { a { padding: 0em; } } 2`] = `

Message:
> 1 | @container (inline-size: 0px) { a { padding: 0em; } }
    |                           ^^ Remove the unit from this zero length.

Output:
  1 | @container (inline-size: 0) { a { padding: 0em; } }

`;

exports[`invalid(9): @container (inline-size: 0px) { a { padding: 0em; } } 3`] = `

Message:
> 1 | @container (inline-size: 0px) { a { padding: 0em; } }
    |                                               ^^ Remove the unit from this zero length.

Output:
  1 | @container (inline-size: 0px) { a { padding: 0; } }

`;
